--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
                   host: ${{ secrets.VM_HOST }}
                   username: ${{ secrets.VM_USER }}
                   key: ${{ secrets.VM_SSH_KEY }}
+                  envs: GITHUB_REPOSITORY
                   script: |
                       set -e
                       APP_NAME="$(basename $GITHUB_REPOSITORY)"
