--- a/.github/workflows/create-app.yml
+++ b/.github/workflows/create-app.yml
@@ -23,6 +23,7 @@ jobs:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USER }}
           key: ${{ secrets.VM_SSH_KEY }}
+          envs: GITHUB_REPOSITORY
           script: |
             set -e
             REPO_NAME="$(basename $GITHUB_REPOSITORY)"
